fixed layout issue for forms

--- a/sakuli-ui-client/src/main/resources/src/styles/_modal.scss
+++ b/sakuli-ui-client/src/main/resources/src/styles/_modal.scss
@@ -4,7 +4,6 @@ ngb-modal-window {
 
   &.sa-text-modal, &.SaTextModalComponent {
     .modal-content {
-      width: 100vw;
     }
   }
 
@@ -16,7 +15,8 @@ ngb-modal-window {
     align-items: center;
     justify-content: center;
     .modal-content {
-      max-width: 95vw;
+      width: 95vw;
+      max-width: 100vw;
       display: flex;
       flex-direction: column;
       > * {
